--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="index.css">
+    <style>
+        body {
+            font-size: 1.5em!important;
+        }
+    </style>
 </head>
 
 <body>
