--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
         body {
             font-size: 1.5em!important;
         }
+
+        .modal-lg {
+            max-width: 80%!important;
+            margin-left: 10%!important;
+        }
+       
+        .modal-lg .modal-dialog {
+            width: 100%;
+            max-width: 100%;
+        }
     </style>
 </head>
 
