--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
             </div>
         </div>
     </div>
-    <script src="http://localhost:8080/jquery_3_4_1.js"></script>
-    <script src="http://localhost:8080/bootstrap_4_3_1.js"></script>
+    <script src="jquery_3_4_1.js"></script>
+    <script src="bootstrap_4_3_1.js"></script>
 
 <script type="text/javascript" src="bundle.min.js"></script></body>
 
